# Student-Record-System

./: CMakeLists.txt  LICENSE  README.md
data/: students.txt
include/: student.h
src/: main.c  student.c
